# cfd--changer

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  bash.exe.stackdump  environment.yml  translate_html.py
.github/workflows/: ci.yml  release.yml
analysis_v2/: analysis_v11.json  analyzer11.py  gen_report2.py
analysis_v2/_archive/: README.md  analyzer.py  analyzer10.py  analyzer2.py  analyzer3.py  analyzer3_run.py  analyzer4.py  analyzer5.py  analyzer6.py  analyzer7.py  analyzer8.py  analyzer9.py  count_braces.py  debug_brace.py  gen_report.py  probe_inp.py  test_a3_v2.py  test_analyzer3.py  test_brace.py  test_brace2.py  test_brace_scan.py  test_braces.py  test_depth.py  test_init.py  test_main_loop.py  test_one.py  test_pos.py  test_speed.py  test_trace.py  test_v5.py  test_v8.py  test_v8b.py
docs/: INDEX.md  README.md  cleanup-plan.md
docs/cfd-gui/: CFD_GUI_CallGraph.md  CFD_GUI_CallGraph_v2.md  CFD_GUI_Engineering_Handbook.md  README.md
docs/plans/: 2026-06-10_docs-cleanup.md  2026-06-10_equation-aware-config.md  2026-06-11_win7-gui.md  2026-06-13_pbs-batch-monitor.md  2026-06-14_gui-release-pipeline.md  2026-06-14_postprocess-borrow.md  README.md
inp_tool/: README.md  inp_tool.spec  inp_tool_gui.spec  inp_tool_onedir.spec  pyproject.toml  run_server.py
inp_tool/examples/: demo.py  mcfd_modified.inp  mcfd_v2_modified.inp  sweep_demo.json  sweep_demo.py  sweep_demo.yaml
inp_tool/inp_tool/: __init__.py  __main__.py  api.py  batch.py  cli.py  cli_post.py  cluster.py  diff.py  equations.py  i18n.py  model.py  monitor.py  parser.py  pbs.py  repl.py  repl_completer.py  repl_history.py  repl_state.py  sweep.py  wizard.py  writer.py
inp_tool/inp_tool/postprocess/: __init__.py  aero_math.py  atmosphere.py  bc.py  convergence.py  forces.py  info1.py  plot.py  report.py
inp_tool/inp_tool_gui/: __init__.py  __main__.py  app.py  main_window.py
inp_tool/inp_tool_gui/controllers/: __init__.py  detect_controller.py  diff_controller.py  edit_controller.py  file_controller.py  postprocess_controller.py  sweep_controller.py
inp_tool/inp_tool_gui/resources/: __init__.py
inp_tool/inp_tool_gui/widgets/: __init__.py  detect_panel.py  diff_viewer.py  inp_tree.py  postprocess_panel.py  preset_dialog.py  sweep_form.py  value_editor.py
inp_tool/tests/: conftest.py  test_aero_math.py  test_api.py  test_atmosphere.py  test_batch.py  test_bc_parser.py  test_cli.py  test_cluster.py  test_completion.py  test_convergence.py  test_detect_equations_intended_axes.py  test_diff.py  test_equation_rewrite.py  test_equation_warnings.py  test_equations.py  test_forces.py  test_gui_detect_controller.py  test_gui_detect_controller_adapter.py  test_gui_detect_panel.py  test_gui_diff.py  test_gui_edit_controller.py  test_gui_file_controller.py  test_gui_inp_tree.py  test_gui_main_window.py  test_gui_main_window_integration.py  test_gui_postprocess_controller.py  test_gui_postprocess_panel.py  test_gui_preset_dialog_v013.py  test_gui_smoke.py  test_gui_sweep_controller.py  test_gui_value_editor.py  test_i18n.py  test_info1_parser.py  test_monitor.py  test_packaging.py  test_parser.py  test_pbs.py  test_pbs_cli.py  test_pbs_name.py  test_pbs_status.py  (+39 more)
inp_tool/tests/data/: repl_smoke.txt  sample_v1.inp  sample_v2.inp
inp_tool/tests/fixtures/compare/: 双温模型+层流mcfd.inp  可压缩理想气体+1方程SA mcfd.inp  可压缩理想气体+1方程goldberg RTmcfd.inp  可压缩理想气体+2re方程alizable k-eps mcfd.inp  可压缩理想气体+2方程SST mcfd.inp  可压缩理想气体+层流mcfd.inp  可压缩真实气体+层流mcfd.inp
inp_tool/tests/fixtures/reference/: bc_mini.bc
inp_tool/tests/fixtures/reference/case/: mcfd.info1  mcfd.inp
inp_tool/web/: index.html
scripts/: audit_docs.py  build.bat  build.sh  generate_gui_icon.py  run_sweep.sh  translate_html.py  translate_turb.py
(+147 files in other folders)
