[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inp-tool"
dynamic = ["version"]
description = "mcfd.inp 解析、修改、diff 工具 (含 FastAPI 后端)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "cfd++changer project"},
]
keywords = ["cfd", "mcfd", "inp", "parser", "diff"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Hydromechanics",
]
dependencies = []

[project.optional-dependencies]
api = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "pydantic>=2.0",
    # 3.8 兼容: Pydantic v2 在 Python 3.8 上评估 PEP 585/604 注解
    "eval_type_backport>=0.2.0 ; python_version < '3.9'",
]
yaml = ["pyyaml>=6.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "httpx>=0.24",   # for FastAPI TestClient
]
build = [
    # 6.16.0: 支持 Python 3.8(6.10+ 移除了 Py3.8 支持);修了一些 5.x onedir bug
    # 升级动机: v0.4.2 修复 onedir 模式(5.13.2 + Py3.8 + Linux 的 _MEI/libpython bug)
    "pyinstaller==6.16.0",
]
gui = [
    # PySide2 5.15.2.1: Qt for Python 的最后稳定版,Qt 5.15 是 Qt 公司承诺支持 Win7
    # 的最后版本(2020-12 EOL);LGPL,商业友好;支持 Python 3.8-3.11
    "PySide2==5.15.2.1",
]
gui-build = [
    "pyinstaller==6.16.0",
    "PySide2==5.15.2.1",
]

[project.scripts]
inp-tool = "inp_tool.cli:main"
inp-tool-api = "inp_tool.api:main"
inp-tool-gui = "inp_tool_gui.app:main"   # v0.10 新增

[project.urls]
"Source" = "https://example.invalid/cfd++changer"

[tool.setuptools]
packages = ["inp_tool", "inp_tool_gui"]

[tool.setuptools.dynamic]
version = {attr = "inp_tool.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
markers = [
    "external: 需要外部 INP_DIR (E:\\softwareData\\edge\\download\\inp) 的真实样本回归测试",
]
